# file-encoder

./: README.md  encryptor.py  pyproject.toml
